[metadata]
name = catty
version = 0.1.1
description = Concatenative programming integrated to Python
url = https://github.com/hamelin/catty
author = Benoit Hamelin
author_email = benoit@benoithamelin.com
 
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Interpreters

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude = test
